--- a/sr_hand_config/6026/calibrations/calibration.yaml
+++ b/sr_hand_config/6026/calibrations/calibration.yaml
@@ -12,22 +12,25 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
 
 sr_calibrations: [
-["FFJ1", [[2995.0, 0.0], [2360.0, 22.5], [1731.0, 45.0], [1170.0, 67.5], [640.0, 90.0]]], 
-["FFJ2", [[2689.0, 0.0], [2384.0, 22.5], [2055.0, 45.0], [1728.0, 67.5], [1449.0, 90.0]]], 
-["FFJ3", [[3362.0, -15.0], [3146.0, 0.0], [2740.0, 22.5], [2243.0, 45.0], [1738.0, 67.5], [1246.0, 90.0]]], 
+["FFJ1", [[2975.0, 0.0], [2360.0, 22.5], [1731.0, 45.0], [1170.0, 67.5], [640.0, 90.0]]], 
+["FFJ2", [[2676.0, 0.0], [2384.0, 22.5], [2055.0, 45.0], [1728.0, 67.5], [1449.0, 90.0]]], 
+["FFJ3", [[3285.0, -15.0], [3055.0, 0.0], [2673.0, 22.5], [2243.0, 45.0], [1738.0, 67.5], [1246.0, 90.0]]], 
 ["FFJ4", [[1881.0, -20.0], [1548.0, -10.0], [1215.0, 0.0], [929.0, 10.0], [680.0, 20.0]]], 
-["MFJ1", [[2667.0, 0.0], [1986.0, 22.5], [1314.0, 45.0], [753.0, 67.5], [420.0, 90.0]]], 
-["MFJ2", [[2893.0, 0.0], [2659.0, 22.5], [2356.0, 45.0], [2061.0, 67.5], [1813.0, 90.0]]], 
+["MFJ1", [[2639.0, 0.0], [1986.0, 22.5], [1314.0, 45.0], [753.0, 67.5], [420.0, 90.0]]], 
+["MFJ2", [[2892.0, 0.0], [2659.0, 22.5], [2356.0, 45.0], [2061.0, 67.5], [1813.0, 90.0]]], 
 ["MFJ3", [[2845.0, -15.0], [2365.0, 0.0], [1776.0, 22.5], [1211.0, 45.0], [802.0, 67.5], [596.0, 90.0]]], 
 ["MFJ4", [[2326.0, -20.0], [2143.0, -10.0], [1964.0, 0.0], [1785.0, 10.0], [1598.0, 20.0]]], 
-["RFJ1", [[3422.0, 0.0], [2919.0, 22.5], [2200.0, 45.0], [1505.0, 67.5], [782.0, 90.0]]], 
-["RFJ2", [[2838.0, 0.0], [2534.0, 22.5], [2161.0, 45.0], [1757.0, 67.5], [1382.0, 90.0]]], 
+["RFJ1", [[3447.0, 0.0], [2919.0, 22.5], [2200.0, 45.0], [1505.0, 67.5], [782.0, 90.0]]], 
+["RFJ2", [[2812.0, 0.0], [2534.0, 22.5], [2161.0, 45.0], [1757.0, 67.5], [1382.0, 90.0]]], 
 ["RFJ3", [[2770.0, -15.0], [2390.0, 0.0], [1923.0, 22.5], [1417.0, 45.0], [1053.0, 67.5], [863.0, 90.0]]], 
-["RFJ4", [[1723.0, -20.0], [1983.7, -10.0], [2242.62, 0.0], [2484.45, 10.0], [2732.93, 20.0]]], 
-["LFJ1", [[3262.0, 0.0], [2680.0, 22.5], [1980.0, 45.0], [1283.0, 67.5], [684.0, 90.0]]], 
-["LFJ2", [[2976.0, 0.0], [2680.0, 22.5], [2287.0, 45.0], [1929.0, 67.5], [1558.0, 90.0]]], 
+["RFJ4", [[1723.0, -20.0], [1983.0, -10.0], [2242.0, 0.0], [2484.0, 10.0], [2732.0, 20.0]]], 
+["LFJ1", [[3261.0, 0.0], [2680.0, 22.5], [1980.0, 45.0], [1283.0, 67.5], [684.0, 90.0]]], 
+["LFJ2", [[2973.0, 0.0], [2680.0, 22.5], [2287.0, 45.0], [1929.0, 67.5], [1558.0, 90.0]]], 
 ["LFJ3", [[3560.0, -15.0], [3310.0, 0.0], [2845.0, 22.5], [2288.0, 45.0], [1737.0, 67.5], [1230.0, 90.0]]], 
 ["LFJ4", [[952.0, -20.0], [1212.0, -10.0], [1504.0, 0.0], [1798.0, 10.0], [2069.0, 20.0]]], 
 ["LFJ5", [[604.0, 0.0], [1423.0, 22.5], [1954.0, 45.0], [2569.0, 67.5]]], 
@@ -43,7 +46,7 @@ sr_calibrations_coupled: [
                     [[2545.0, 2215.0], -15.0, 20.0], 
                     [[2526.0, 2021.0], -15.0, 0.0], 
                     [[2509.0, 1839.0], -15.0, -20.0], 
-                    [[2491.0, 1705.0], -15.0, -40.0],
+                    [[2491.0, 1705.0], -15.0, -40.0], 
                     [[2276.0, 2357.0], 0.0, 40.0], 
                     [[2262.0, 2184.0], 0.0, 20.0], 
                     [[2245.0, 1999.0], 0.0, 0.0], 
