--- a/sr_hand_config/5450/general_info.yaml
+++ b/sr_hand_config/5450/general_info.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -17,7 +17,7 @@ type: 'hand_g'
 version: 'G1M5'
 fingers: [th, ff, mf, rf]
 sensors:
-  tip: {th: pst, ff: pst, mf: pst, rf: pst}
+  tip: {th: mst, ff: mst, mf: mst, rf: mst}
   mid: {}
   prox: {}
   palm: {}
