--- a/sr_hand_config/8234/calibrations/calibration.yaml
+++ b/sr_hand_config/8234/calibrations/calibration.yaml
@@ -12,27 +12,31 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[3055.0, 0.0], [2498.0, 22.5], [1862.0, 45.0], [1242.0, 67.5], [723.0, 90.0]]], 
-["FFJ2", [[2968.0, 0.0], [2709.0, 22.5], [2363.0, 45.0], [1943.0, 67.5], [1597.0, 90.0]]], 
+["FFJ1", [[3052.0, 0.0], [2498.0, 22.5], [1862.0, 45.0], [1242.0, 67.5], [723.0, 90.0]]], 
+["FFJ2", [[2992.0, 0.0], [2709.0, 22.5], [2363.0, 45.0], [1943.0, 67.5], [1597.0, 90.0]]], 
 ["FFJ3", [[3125.0, -15.0], [2729.0, 0.0], [2170.0, 22.5], [1570.0, 45.0], [1070.0, 67.5], [692.0, 90.0]]], 
-["FFJ4", [[1821.0, -20.0], [1491.0, -10.0], [1181.0, 0.0], [882.0, 10.0], [640.0, 20.0]]], 
-["MFJ1", [[2832.0, 0.0], [2281.0, 22.5], [1694.0, 45.0], [1100.0, 67.5], [750.0, 90.0]]], 
-["MFJ2", [[2870.0, 0.0], [2593.0, 22.5], [2250.0, 45.0], [1888.0, 67.5], [1524.0, 90.0]]], 
-["MFJ3", [[3116.0, -15.0], [2770.0, 0.0], [2284.0, 22.5], [1738.0, 45.0], [1217.0, 67.5], [759.0, 90.0]]], 
-["MFJ4", [[2376.0, -20.0], [2101.0, -10.0], [1775.0, 0.0], [1511.0, 10.0], [1251.0, 20.0]]], 
-["RFJ1", [[3223.0, 0.0], [2611.0, 22.5], [1915.0, 45.0], [1230.0, 67.5], [649.0, 90.0]]], 
-["RFJ2", [[2921.0, 0.0], [2649.0, 22.5], [2316.0, 45.0], [1940.0, 67.5], [1639.0, 90.0]]], 
-["RFJ3", [[3012.0, -15.0], [2640.0, 0.0], [2122.0, 22.5], [1591.0, 45.0], [1118.0, 67.5], [734.0, 90.0]]], 
-["RFJ4", [[927.0, -20.0], [1218.0, -10.0], [1502.0, 0.0], [1868.0, 10.0], [2174.0, 20.0]]], 
-["LFJ1", [[2746.0, 0.0], [2153.0, 22.5], [1505.0, 45.0], [916.0, 67.5], [516.0, 90.0]]], 
-["LFJ2", [[2925.0, 0.0], [2760.0, 22.5], [2479.0, 45.0], [2142.0, 67.5], [1798.0, 90.0]]], 
-["LFJ3", [[3053.0, -15.0], [2671.0, 0.0], [2057.0, 22.5], [1518.0, 45.0], [1052.0, 67.5], [691.0, 90.0]]], 
-["LFJ4", [[492.0, -20.0], [686.0, -10.0], [996.0, 0.0], [1244.0, 10.0], [1529.0, 20.0]]], 
-["LFJ5", [[336.0, 0.0], [1183.0, 22.5], [1741.0, 45.0], [2359.0, 67.5]]], 
+["FFJ4", [[1821.0, -20.0], [1491.0, -10.0], [1136.0, 0.0], [882.0, 10.0], [640.0, 20.0]]], 
+["MFJ1", [[2845.0, 0.0], [2281.0, 22.5], [1694.0, 45.0], [1100.0, 67.5], [750.0, 90.0]]], 
+["MFJ2", [[2879.0, 0.0], [2593.0, 22.5], [2250.0, 45.0], [1888.0, 67.5], [1524.0, 90.0]]], 
+["MFJ3", [[3116.0, -15.0], [2769.0, 0.0], [2284.0, 22.5], [1738.0, 45.0], [1217.0, 67.5], [759.0, 90.0]]], 
+["MFJ4", [[2376.0, -20.0], [2101.0, -10.0], [1759.0, 0.0], [1511.0, 10.0], [1251.0, 20.0]]], 
+["RFJ1", [[3232.0, 0.0], [2611.0, 22.5], [1915.0, 45.0], [1230.0, 67.5], [649.0, 90.0]]], 
+["RFJ2", [[2924.0, 0.0], [2649.0, 22.5], [2316.0, 45.0], [1940.0, 67.5], [1639.0, 90.0]]], 
+["RFJ3", [[3012.0, -15.0], [2653.0, 0.0], [2122.0, 22.5], [1591.0, 45.0], [1118.0, 67.5], [734.0, 90.0]]], 
+["RFJ4", [[927.0, -20.0], [1218.0, -10.0], [1501.0, 0.0], [1868.0, 10.0], [2174.0, 20.0]]], 
+["LFJ1", [[2765.0, 0.0], [2153.0, 22.5], [1505.0, 45.0], [916.0, 67.5], [516.0, 90.0]]], 
+["LFJ2", [[2933.0, 0.0], [2760.0, 22.5], [2479.0, 45.0], [2142.0, 67.5], [1798.0, 90.0]]], 
+["LFJ3", [[3053.0, -15.0], [2651.0, 0.0], [2057.0, 22.5], [1518.0, 45.0], [1052.0, 67.5], [691.0, 90.0]]], 
+["LFJ4", [[492.0, -20.0], [686.0, -10.0], [986.0, 0.0], [1244.0, 10.0], [1529.0, 20.0]]], 
+["LFJ5", [[311.0, 0.0], [1183.0, 22.5], [1741.0, 45.0], [2359.0, 67.5]]], 
 ["THJ3", [[2556.0, -12.0], [1678.0, 0.0], [1066.0, 12.0]]], 
-["THJ4", [[2648.0, 0.0], [2395.0, 22.5], [2095.0, 45.0], [1802.0, 67.5]]], 
-["THJ5", [[652.0, -60.0], [940.0, -45.0], [1182.0, -30.0], [1505.0, -15.0], [1946.0, 0.0], [2400.0, 15.0], [2741.0, 30.0], [2976.0, 45.0], [3268.0, 60.0]]], 
+["THJ4", [[2601.0, 0.0], [2339.0, 22.5], [2039.0, 45.0], [1753.0, 67.5]]], 
+["THJ5", [[652.0, -60.0], [940.0, -45.0], [1199.0, -30.0], [1555.0, -15.0], [2019.0, 0.0], [2479.0, 15.0], [2741.0, 30.0], [2976.0, 45.0], [3268.0, 60.0]]], 
 ["WRJ1", [[2446.0, -45.0], [2284.0, -22.5], [2125.0, 0.0], [1985.0, 15.0], [1866.0, 30.0]]], 
 ["WRJ2", [[2620.0, -30.0], [1069.0, 0.0], [411.0, 10.0]]], 
 ]
