--- a/sr_hand_config/1130/calibrations/calibration.yaml
+++ b/sr_hand_config/1130/calibrations/calibration.yaml
@@ -11,65 +11,64 @@
 #
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
-
 # This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
 # Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
 # sr_triple_pedal.py. I'll leave this here in case it might be useful later.
 
 sr_calibrations: [
-["FFJ1", [[2951.0, 0.0], [2124.0, 22.5], [1417.0, 45.0], [679.0, 67.5], [238.0, 90.0]]], 
-["FFJ2", [[2755.0, 0.0], [2418.0, 22.5], [2121.0, 45.0], [1825.0, 67.5], [1467.0, 90.0]]], 
-["FFJ3", [[3289.0, -15.0], [2770.0, 0.0], [2095.0, 22.5], [1463.0, 45.0], [992.0, 67.5], [669.0, 90.0]]], 
+["FFJ1", [[3070.0, 0.0], [2124.0, 22.5], [1417.0, 45.0], [679.0, 67.5], [238.0, 90.0]]], 
+["FFJ2", [[2760.0, 0.0], [2418.0, 22.5], [2121.0, 45.0], [1825.0, 67.5], [1467.0, 90.0]]], 
+["FFJ3", [[3282.0, -15.0], [2790.0, 0.0], [2120.0, 22.5], [1411.0, 45.0], [935.0, 67.5], [642.0, 90.0]]], 
 ["FFJ4", [[608.0, -20.0], [1285.0, -10.0], [1711.0, 0.0], [1943.0, 10.0], [2010.0, 20.0]]], 
-["MFJ1", [[3071.0, 0.0], [2318.0, 22.5], [1645.0, 45.0], [1026.0, 67.5], [489.0, 90.0]]], 
-["MFJ2", [[2706.0, 0.0], [2327.0, 22.5], [1992.0, 45.0], [1632.0, 67.5], [1239.0, 90.0]]], 
-["MFJ3", [[3060.0, -15.0], [2711.0, 0.0], [2133.0, 22.5], [1533.0, 45.0], [1059.0, 67.5], [733.0, 90.0]]], 
+["MFJ1", [[3095.0, 0.0], [2318.0, 22.5], [1645.0, 45.0], [1026.0, 67.5], [489.0, 90.0]]], 
+["MFJ2", [[2710.0, 0.0], [2327.0, 22.5], [1992.0, 45.0], [1632.0, 67.5], [1239.0, 90.0]]], 
+["MFJ3", [[3115.0, -15.0], [2683.0, 0.0], [2083.0, 22.5], [1464.0, 45.0], [985.0, 67.5], [654.0, 90.0]]], 
 ["MFJ4", [[1018.0, -20.0], [1572.0, -10.0], [1816.0, 0.0], [1963.0, 10.0], [2018.0, 20.0]]], 
-["RFJ1", [[2976.0, 0.0], [2040.0, 22.5], [1350.0, 45.0], [737.0, 67.5], [317.0, 90.0]]], 
-["RFJ2", [[2877.0, 0.0], [2638.0, 22.5], [2290.0, 45.0], [1936.0, 67.5], [1608.0, 90.0]]], 
-["RFJ3", [[2834.0, -15.0], [2377.0, 0.0], [1881.0, 22.5], [1307.0, 45.0], [815.0, 67.5], [518.0, 90.0]]], 
+["RFJ1", [[2935.0, 0.0], [2040.0, 22.5], [1350.0, 45.0], [737.0, 67.5], [317.0, 90.0]]], 
+["RFJ2", [[2902.0, 0.0], [2638.0, 22.5], [2290.0, 45.0], [1936.0, 67.5], [1608.0, 90.0]]], 
+["RFJ3", [[2839.0, -15.0], [2402.0, 0.0], [1882.0, 22.5], [1240.0, 45.0], [822.0, 67.5], [519.0, 90.0]]], 
 ["RFJ4", [[2033.0, -20.0], [1973.0, -10.0], [1856.0, 0.0], [1632.0, 10.0], [1127.0, 20.0]]], 
-["LFJ1", [[3180.0, 0.0], [2464.0, 22.5], [1714.0, 45.0], [945.0, 67.5], [451.0, 90.0]]], 
-["LFJ2", [[2842.0, 0.0], [2562.0, 22.5], [2191.0, 45.0], [1767.0, 67.5], [1478.0, 90.0]]], 
-["LFJ3", [[3130.0, -15.0], [2734.0, 0.0], [2015.0, 22.5], [1366.0, 45.0], [797.0, 67.5], [521.0, 90.0]]], 
+["LFJ1", [[3298.0, 0.0], [2464.0, 22.5], [1714.0, 45.0], [945.0, 67.5], [451.0, 90.0]]], 
+["LFJ2", [[2800.0, 0.0], [2562.0, 22.5], [2191.0, 45.0], [1767.0, 67.5], [1478.0, 90.0]]], 
+["LFJ3", [[3140.0, -15.0], [2690.0, 0.0], [2097.0, 22.5], [1396.0, 45.0], [846.0, 67.5], [518.0, 90.0]]], 
 ["LFJ4", [[2014.0, -20.0], [1962.0, -10.0], [1814.0, 0.0], [1570.0, 10.0], [1006.0, 20.0]]], 
-["LFJ5", [[1266.0, 0.0], [1738.0, 22.5], [2042.0, 45.0], [2441.0, 67.5]]], 
+["LFJ5", [[1230.0, 0.0], [1738.0, 22.5], [2042.0, 45.0], [2441.0, 67.5]]], 
 ["THJ3", [[1556.0, -12.0], [2145.0, 0.0], [2515.0, 12.0]]], 
-["THJ4", [[1610.0, 0.0], [1963.0, 22.5], [2279.0, 45.0], [2523.0, 67.5]]], 
-["THJ5", [[879.0, -60.0], [1369.0, -30.0], [2108.0, 0.0], [2818.0, 30.0], [3440.0, 60.0]]], 
+["THJ4", [[1637.0, 0.0], [1951.0, 22.5], [2242.0, 45.0], [2516.0, 67.5]]], 
+["THJ5", [[738.0, -60.0], [1000.0, -45.0], [1230.0, -30.0], [1478.0, -15.0], [1880.0, 0.0], [2255.0, 15.0], [2650.0, 30.0], [2983.0, 45.0], [3265.0, 60.0]]], 
 ["WRJ1", [[2425.0, -45.0], [2242.0, -22.5], [2025.9, 0.0], [1862.0, 15.0], [1743.0, 30.0]]], 
 ["WRJ2", [[3083.0, -30.0], [1713.0, 0.0], [1418.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2949.0, 2278.0], -15.0, 40.0], 
-                    [[2940.0, 2140.0], -15.0, 20.0], 
-                    [[2930.0, 1980.0], -15.0, 0.0], 
-                    [[2909.0, 1835.0], -15.0, -20.0], 
-                    [[2889.0, 1712.0], -15.0, -40.0],
-                    [[2694.0, 2263.0], 0.0, 40.0], 
-                    [[2674.0, 2126.0], 0.0, 20.0], 
-                    [[2664.0, 1969.0], 0.0, 0.0], 
-                    [[2645.0, 1825.0], 0.0, -20.0], 
-                    [[2630.0, 1707.0], 0.0, -40.0], 
-                    [[2225.0, 2245.0], 22.5, 40.0], 
-                    [[2235.0, 2105.0], 22.5, 20.0], 
-                    [[2217.0, 1950.0], 22.5, 0.0], 
-                    [[2209.0, 1805.0], 22.5, -20.0], 
-                    [[2200.0, 1678.0], 22.5, -40.0], 
-                    [[1805.0, 2221.0], 45.0, 40.0], 
-                    [[1782.0, 2082.0], 45.0, 20.0], 
-                    [[1763.0, 1924.0], 45.0, 0.0], 
-                    [[1756.0, 1781.0], 45.0, -20.0], 
-                    [[1755.0, 1663.0], 45.0, -40.0], 
-                    [[1404.0, 2200.0], 67.5, 40.0], 
-                    [[1377.0, 2057.0], 67.5, 20.0], 
-                    [[1358.0, 1904.0], 67.5, 0.0], 
-                    [[1353.0, 1757.0], 67.5, -20.0], 
-                    [[1351.0, 1635.0], 67.5, -40.0], 
-                    [[1170.0, 2184.0], 90.0, 40.0], 
-                    [[1132.0, 2044.0], 90.0, 20.0], 
-                    [[1100.0, 1879.0], 90.0, 0.0], 
-                    [[1097.0, 1737.0], 90.0, -20.0], 
-                    [[1098.0, 1621.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[2776.0, 2254.0], -15.0, 40.0], 
+                    [[2762.0, 2124.0], -15.0, 20.0], 
+                    [[2747.0, 1983.0], -15.0, 0.0], 
+                    [[2732.0, 1854.0], -15.0, -20.0], 
+                    [[2717.0, 1752.0], -15.0, -40.0],
+                    [[2567.0, 2247.0], 0.0, 40.0], 
+                    [[2554.0, 2120.0], 0.0, 20.0], 
+                    [[2541.0, 1976.0], 0.0, 0.0], 
+                    [[2526.0, 1842.0], 0.0, -20.0], 
+                    [[2511.0, 1737.0], 0.0, -40.0], 
+                    [[2169.0, 2226.0], 22.5, 40.0], 
+                    [[2154.0, 2104.0], 22.5, 20.0], 
+                    [[2140.0, 1954.0], 22.5, 0.0], 
+                    [[2123.0, 1825.0], 22.5, -20.0], 
+                    [[2110.0, 1722.0], 22.5, -40.0], 
+                    [[1769.0, 2201.0], 45.0, 40.0], 
+                    [[1749.0, 2074.0], 45.0, 20.0], 
+                    [[1737.0, 1932.0], 45.0, 0.0], 
+                    [[1722.0, 1797.0], 45.0, -20.0], 
+                    [[1712.0, 1694.0], 45.0, -40.0], 
+                    [[1443.0, 2180.0], 67.5, 40.0], 
+                    [[1434.0, 2057.0], 67.5, 20.0], 
+                    [[1418.0, 1913.0], 67.5, 0.0], 
+                    [[1403.0, 1781.0], 67.5, -20.0], 
+                    [[1392.0, 1669.0], 67.5, -40.0], 
+                    [[1224.0, 2159.0], 90.0, 40.0], 
+                    [[1200.0, 2031.0], 90.0, 20.0], 
+                    [[1188.0, 1888.0], 90.0, 0.0], 
+                    [[1176.0, 1762.0], 90.0, -20.0], 
+                    [[1165.0, 1645.0], 90.0, -40.0]]]
 ]
