--- a/sr_hand_config/8458/calibrations/calibration.yaml
+++ b/sr_hand_config/8458/calibrations/calibration.yaml
@@ -12,27 +12,31 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[2970.0, 0.0], [2280.0, 22.5], [1546.0, 45.0], [916.0, 67.5], [436.0, 90.0]]], 
-["FFJ2", [[2945.0, 0.0], [2675.0, 22.5], [2338.0, 45.0], [1964.0, 67.5], [1647.0, 90.0]]], 
-["FFJ3", [[2996.0, -15.0], [2578.0, 0.0], [2061.0, 22.5], [1545.0, 45.0], [1043.0, 67.5], [707.0, 90.0]]], 
+["FFJ1", [[2971.0, 0.0], [2280.0, 22.5], [1546.0, 45.0], [916.0, 67.5], [436.0, 90.0]]], 
+["FFJ2", [[2943.0, 0.0], [2675.0, 22.5], [2338.0, 45.0], [1964.0, 67.5], [1647.0, 90.0]]], 
+["FFJ3", [[2996.0, -15.0], [2593.0, 0.0], [2061.0, 22.5], [1545.0, 45.0], [1043.0, 67.5], [707.0, 90.0]]], 
 ["FFJ4", [[556.0, -20.0], [844.0, -10.0], [1151.0, 0.0], [1459.0, 10.0], [1790.0, 20.0]]], 
-["MFJ1", [[3220.0, 0.0], [2586.0, 22.5], [1894.0, 45.0], [1167.0, 67.5], [682.0, 90.0]]], 
-["MFJ2", [[2879.0, 0.0], [2555.0, 22.5], [2162.0, 45.0], [1754.0, 67.5], [1403.0, 90.0]]], 
-["MFJ3", [[3034.0, -15.0], [2741.2, 0.0], [2198.0, 22.5], [1614.0, 45.0], [1102.0, 67.5], [680.0, 90.0]]], 
-["MFJ4", [[486.0, -20.0], [783.0, -10.0], [1120.0, 0.0], [1451.0, 10.0], [1814.0, 20.0]]], 
-["RFJ1", [[3296.0, 0.0], [2792.0, 22.5], [2196.0, 45.0], [1612.0, 67.5], [1026.0, 90.0]]], 
-["RFJ2", [[2950.0, 0.0], [2723.0, 22.5], [2411.0, 45.0], [2044.0, 67.5], [1702.0, 90.0]]], 
-["RFJ3", [[2957.0, -15.0], [2581.0, 0.0], [2121.0, 22.5], [1606.0, 45.0], [1189.0, 67.5], [912.0, 90.0]]], 
-["RFJ4", [[1999.0, -20.0], [1700.0, -10.0], [1355.0, 0.0], [1053.0, 10.0], [796.0, 20.0]]], 
-["LFJ1", [[3187.0, 0.0], [2604.0, 22.5], [1930.0, 45.0], [1188.0, 67.5], [734.0, 90.0]]], 
-["LFJ2", [[2924.0, 0.0], [2704.0, 22.5], [2381.0, 45.0], [2004.0, 67.5], [1588.0, 90.0]]], 
-["LFJ3", [[2972.0, -15.0], [2601.62, 0.0], [2045.0, 22.5], [1536.0, 45.0], [1069.0, 67.5], [784.0, 90.0]]], 
-["LFJ4", [[2148.0, -20.0], [1843.0, -10.0], [1502.0, 0.0], [1192.0, 10.0], [961.0, 20.0]]], 
+["MFJ1", [[3235.0, 0.0], [2586.0, 22.5], [1894.0, 45.0], [1167.0, 67.5], [682.0, 90.0]]], 
+["MFJ2", [[2890.0, 0.0], [2555.0, 22.5], [2162.0, 45.0], [1754.0, 67.5], [1403.0, 90.0]]], 
+["MFJ3", [[3034.0, -15.0], [2741.0, 0.0], [2198.0, 22.5], [1614.0, 45.0], [1102.0, 67.5], [680.0, 90.0]]], 
+["MFJ4", [[486.0, -20.0], [783.0, -10.0], [1111.0, 0.0], [1451.0, 10.0], [1814.0, 20.0]]], 
+["RFJ1", [[3305.0, 0.0], [2789.0, 22.5], [2185.0, 45.0], [167.0, 67.5], [1025.0, 90.0]]], 
+["RFJ2", [[2932.0, 0.0], [2713.0, 22.5], [2401.0, 45.0], [2039.0, 67.5], [1701.0, 90.0]]], 
+["RFJ3", [[2957.0, -15.0], [2599.0, 0.0], [2121.0, 22.5], [1606.0, 45.0], [1189.0, 67.5], [912.0, 90.0]]], 
+["RFJ4", [[1999.0, -20.0], [1700.0, -10.0], [1371.0, 0.0], [1053.0, 10.0], [796.0, 20.0]]], 
+["LFJ1", [[3191.0, 0.0], [2604.0, 22.5], [1930.0, 45.0], [1188.0, 67.5], [734.0, 90.0]]], 
+["LFJ2", [[2934.0, 0.0], [2704.0, 22.5], [2381.0, 45.0], [2004.0, 67.5], [1588.0, 90.0]]], 
+["LFJ3", [[2972.0, -15.0], [2601.0, 0.0], [2045.0, 22.5], [1536.0, 45.0], [1069.0, 67.5], [784.0, 90.0]]], 
+["LFJ4", [[2148.0, -20.0], [1843.0, -10.0], [1485.0, 0.0], [1192.0, 10.0], [961.0, 20.0]]], 
 ["LFJ5", [[805.0, 0.0], [1381.0, 22.5], [1829.0, 45.0], [2302.0, 67.5]]], 
 ["THJ3", [[2357.0, -12.0], [1772.0, 0.0], [1140.0, 12.0]]], 
 ["THJ4", [[2767.0, 0.0], [2488.0, 22.5], [2151.0, 45.0], [1796.0, 67.5]]], 
-["THJ5", [[630.0, -60.0], [795.0, -45.0], [1060.0, -30.0], [1339.0, -15.0], [1700.0, 0.0], [2096.0, 15.0], [2499.0, 30.0], [2779.0, 45.0], [3059.0, 60.0]]], 
+["THJ5", [[631.0, -60.0], [799.0, -45.0], [1095.0, -30.0], [1379.0, -15.0], [1750.0, 0.0], [2145.0, 15.0], [2551.0, 30.0], [2831.0, 45.0], [3099.0, 60.0]]], 
 ["WRJ1", [[2220.0, -45.0], [2076.0, -22.5], [1867.0, 0.0], [1731.0, 15.0], [1633.0, 30.0]]], 
 ["WRJ2", [[2676.0, -30.0], [1083.0, 0.0], [510.0, 10.0]]], 
 ]
